2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>

	* weather.h (_WeatherLocation): Added flag to track if zone information is 
	valid.

	* weather.c (weather_location_new): Set zone validity flag from information
	in Locations file.

	* gweather-dialog.c (gweather_dialog_create): Only display forecast tab if
	zone entry is valid.

	(gweather_dialog_update): Only update forecast tab, if the zone entry is
	valid.
	
	Patch by: Gareth Owen  <gowen72@yahoo.com>
	
	Fixes bug #97593.

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-pref.c: HIG fixes for the treeview.

	Patch by: Ross Burton  <r.burton@180sw.com>

	Fixes bug: #144027.

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>
	* gweather-pref.c: Portability fixes for the IBM C compiler.

2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>
	Fix for transparant radar images.

	Patch by: Gareth Owen  <gowen72@yahoo.com>

	Fixes bug #139216.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	* weather.c (weather_info_config_read):
	Initializing some variables to fix crasher on
	location change.

	Patch by: Gareth Owen  <gowen72@yahoo.com>

	Fixes bug #143869.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-pref.c (gweather_pref_create):
	Ally fixes by: Padraig 'O brain <padraig.obriain@sun.com>.

	Fixes bug 134929.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	* gweather-applet.c (gweather_applet_create):
	Use alignment instead of hbox for the container
	so the applet gets centered on vertical panels.

	Patch by: Gareth Owen  <gowen72@yahoo.com>

	Fixes bug #133771.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>
	
	* weather.c: Changing the CLOUD_RE_STR define.
	(metar_tok_cloud): Adding support for NSC, sky clear
	tag.

	Patch by: Fabrice Bellet  <fabrice@bellet.info>

	Fixes bug #134452.

2004-06-07  Dennis Smit  <ds@nerds-incorporated.org>

	patch by: Kaushal Kumar  <kaushal.kumar@wipro.com>

	* Locations: Added Bangalore (VOBG) in India.
