@@ -1,5 +1,13 @@
 2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>
 
+	* gweather-pref.c (gweather_pref_create):
+	
+	Set the preference window resizeable flag to FALSE.
+
+	Fixes bug: 144032.
+
+2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>
+
 	* weather.h (_WeatherLocation): Added flag to track if zone information is 
 	valid.
 
